--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,72 @@
-/obj/**
-.vs/**
-.vscode/**
+# ===================================== #
+# Visual Studio / Windows               #
+# ===================================== #
+*.ipch
+*.so
+*.suo
+*.opensdf
+*.user
+*.sdf
+*.lib
+*.log
+*.o
+*.xccheckout
+*.xcuserdatad
+*.xcuserstate
+*.xcsettings
+*.plist
+*.VC.opendb
+*.db
+*.pyc
+libs/
+bin/
+obj/
+gen/
+Build/
+Temp/
+Tegra-Android/
+Debug/
+.vs/
+
+# =============== #
+# Unity generated #
+# =============== #
+Temp/
+Obj/
+UnityGenerated/
+Library/
+UnityBeer_Data/
+Assets/AssetStoreTools*
+Beer_Data/
+Build/
+
+# ===================================== #
+# Visual Studio / MonoDevelop generated #
+# ===================================== #
+*.svd
+*.userprefs
+*.pidb
+*.suo
+*.user
+*.unityproj
+*.booproj
+
+# ============= #
+# iOS generated #
+# ============= #
+Client/iOS
+
+# ============ #
+# OS generated #
+# ============ #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+Assets/VSCode
+VSCode.meta
+settings.json
